prevents stubborn browsers from always rendering scrollbars

--- a/app/addons/fauxton/assets/less/navigation.less
+++ b/app/addons/fauxton/assets/less/navigation.less
@@ -6,7 +6,8 @@
   top: 0;
   bottom: 0;
   z-index: 5;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .faux-navbar nav {
